tests/language_tests/pass/0087_return_expression_value.ee
fn helper() {
    return 42;
}

fn main() {
    print(helper());
}
