tests/language_tests/fail/0048_break_in_called_function.ee
fn helper() {
    break;
}

fn main() {
    helper();
}
